--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Regelgeving
 site_author: 'Codex Roleplay'
-site_url: 'https://securityx17.github.io/apv'
+site_url: 'https://securityx17.github.io/codex'
 theme:
   name: material
 
